hw4.3f/parser.output
Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: funDeclaration
    5            | varDeclaration

    6 varDeclaration: typespec vardeclarationList SEMICOLON

    7 scopedtypespecificer: STATIC typespec vardeclarationList SEMICOLON
    8                     | typespec vardeclarationList SEMICOLON

    9 vardeclarationList: vardeclarationList COMMA varDeclarationInit
   10                   | varDeclarationInit

   11 varDeclarationInit: varDeclarationId
   12                   | varDeclarationId COLON simpleExp

   13 varDeclarationId: ID
   14                 | ID OBRACKET NUMCONST CBRACKET

   15 typespec: INT
   16         | CHAR
   17         | BOOL

   18 funDeclaration: typespec ID OPAREN parameters CPAREN compoundstatement
   19               | ID OPAREN parameters CPAREN compoundstatement

   20 parameters: parameterList
   21           | ε

   22 parameterList: parameterList SEMICOLON parameterTypeList
   23              | parameterTypeList

   24 parameterTypeList: typespec parameterIdList

   25 parameterIdList: parameterIdList COMMA parameterId
   26                | parameterId

   27 parameterId: ID
   28            | ID OBRACKET CBRACKET

   29 statement: matched
   30          | unmatched

   31 matched: statementEnd
   32        | IF simpleExp THEN matched ELSE matched
   33        | WHILE simpleExp DO matched
   34        | FOR ID ASGN iterRange DO matched
   35        | FOR ID LEQ iterRange DO matched

   36 unmatched: IF simpleExp THEN matched ELSE unmatched
   37          | IF simpleExp THEN statement
   38          | WHILE simpleExp DO unmatched
   39          | FOR ID ASGN iterRange DO unmatched

   40 expstatement: exp SEMICOLON
   41             | SEMICOLON

   42 statementEnd: expstatement
   43             | compoundstatement
   44             | breakstatement
   45             | returnstatement

   46 compoundstatement: BEGN localdeclaration statementList FINISH

   47 localdeclaration: localdeclaration scopedtypespecificer
   48                 | ε

   49 statementList: statementList statement
   50              | ε

   51 iterRange: simpleExp TO simpleExp
   52          | simpleExp TO simpleExp BY simpleExp

   53 returnstatement: RETURN SEMICOLON
   54                | RETURN exp SEMICOLON

   55 breakstatement: BREAK SEMICOLON

   56 asgnop: ASGN
   57       | ADDASGN
   58       | SUBASS
   59       | MULASS
   60       | DIVASS

   61 exp: mutable asgnop exp
   62    | simpleExp
   63    | mutable INC
   64    | mutable DEC

   65 simpleExp: simpleExp OR andExp
   66          | andExp

   67 andExp: andExp AND unaryRelExp
   68       | unaryRelExp

   69 relExp: sumExp operator sumExp
   70       | sumExp

   71 unaryRelExp: NOT unaryRelExp
   72            | relExp

   73 operator: GREAT
   74         | GEQ
   75         | LESS
   76         | LEQ
   77         | EQUAL
   78         | NEQ

   79 sumExp: sumExp sumop mulExp
   80       | mulExp

   81 sumop: PLUS
   82      | MINUS

   83 mulExp: mulExp mulop unaryExp
   84       | unaryExp

   85 mulop: MULT
   86      | DIV
   87      | MOD

   88 unaryExp: unaryop unaryExp
   89         | factor

   90 unaryop: MINUS
   91        | MULT
   92        | QUESTION

   93 mutable: ID
   94        | ID OBRACKET exp CBRACKET

   95 immutable: OPAREN exp CPAREN
   96          | call
   97          | constant

   98 factor: mutable
   99       | immutable

  100 call: ID OPAREN args CPAREN

  101 args: argList
  102     | ε

  103 argList: argList COMMA exp
  104        | exp

  105 constant: NUMCONST
  106         | CHARCONST
  107         | BOOLCONST
  108         | STRINGCONST


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <tokenData> (258) 13 14 18 19 27 28 34 35 39 93 94 100
    NUMCONST <tokenData> (259) 14 105
    CHARCONST <tokenData> (260) 106
    STRINGCONST <tokenData> (261) 108
    ASGN <tokenData> (262) 34 39 56
    ADDASGN <tokenData> (263) 57
    SUBASS <tokenData> (264) 58
    INC <tokenData> (265) 63
    DEC <tokenData> (266) 64
    GEQ <tokenData> (267) 74
    LEQ <tokenData> (268) 35 76
    NEQ <tokenData> (269) 78
    MULASS <tokenData> (270) 59
    DIVASS <tokenData> (271) 60
    INT <tokenData> (272) 15
    IF <tokenData> (273) 32 36 37
    OR <tokenData> (274) 65
    NOT <tokenData> (275) 71
    BY <tokenData> (276) 52
    ELSE <tokenData> (277) 32 36
    THEN <tokenData> (278) 32 36 37
    FOR <tokenData> (279) 34 35 39
    BREAK <tokenData> (280) 55
    RETURN <tokenData> (281) 53 54
    BOOL <tokenData> (282) 17
    CHAR <tokenData> (283) 16
    STATIC <tokenData> (284) 7
    AND <tokenData> (285) 67
    BEGN <tokenData> (286) 46
    FINISH <tokenData> (287) 46
    DO <tokenData> (288) 33 34 35 38 39
    WHILE <tokenData> (289) 33 38
    TO <tokenData> (290) 51 52
    BOOLCONST <tokenData> (291) 107
    QUESTION <tokenData> (292) 92
    LESS <tokenData> (293) 75
    GREAT <tokenData> (294) 73
    PLUS <tokenData> (295) 81
    EQUAL <tokenData> (296) 77
    MULT <tokenData> (297) 85 91
    DIV <tokenData> (298) 86
    MOD <tokenData> (299) 87
    COMMA <tokenData> (300) 9 25 103
    OBRACKET <tokenData> (301) 14 28 94
    CBRACKET <tokenData> (302) 14 28 94
    MINUS <tokenData> (303) 82 90
    COLON <tokenData> (304) 12
    SEMICOLON <tokenData> (305) 6 7 8 22 40 41 53 54 55
    OPAREN <tokenData> (306) 18 19 95 100
    CPAREN <tokenData> (307) 18 19 95 100


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    program (54)
        on left: 1
        on right: 0
    declarationList <tree> (55)
        on left: 2 3
        on right: 1 2
    declaration <tree> (56)
        on left: 4 5
        on right: 2 3
    varDeclaration <tree> (57)
        on left: 6
        on right: 5
    scopedtypespecificer <tree> (58)
        on left: 7 8
        on right: 47
    vardeclarationList <tree> (59)
        on left: 9 10
        on right: 6 7 8 9
    varDeclarationInit <tree> (60)
        on left: 11 12
        on right: 9 10
    varDeclarationId <tree> (61)
        on left: 13 14
        on right: 11 12
    typespec <type> (62)
        on left: 15 16 17
        on right: 6 7 8 18 24
    funDeclaration <tree> (63)
        on left: 18 19
        on right: 4
    parameters <tree> (64)
        on left: 20 21
        on right: 18 19
    parameterList <tree> (65)
        on left: 22 23
        on right: 20 22
    parameterTypeList <tree> (66)
        on left: 24
        on right: 22 23
    parameterIdList <tree> (67)
        on left: 25 26
        on right: 24 25
    parameterId <tree> (68)
        on left: 27 28
        on right: 25 26
    statement <tree> (69)
        on left: 29 30
        on right: 37 49
    matched <tree> (70)
        on left: 31 32 33 34 35
        on right: 29 32 33 34 35 36
    unmatched <tree> (71)
        on left: 36 37 38 39
        on right: 30 36 38 39
    expstatement <tree> (72)
        on left: 40 41
        on right: 42
    statementEnd <tree> (73)
        on left: 42 43 44 45
        on right: 31
    compoundstatement <tree> (74)
        on left: 46
        on right: 18 19 43
    localdeclaration <tree> (75)
        on left: 47 48
        on right: 46 47
    statementList <tree> (76)
        on left: 49 50
        on right: 46 49
    iterRange <tree> (77)
        on left: 51 52
        on right: 34 35 39
    returnstatement <tree> (78)
        on left: 53 54
        on right: 45
    breakstatement <tree> (79)
        on left: 55
        on right: 44
    asgnop <tree> (80)
        on left: 56 57 58 59 60
        on right: 61
    exp <tree> (81)
        on left: 61 62 63 64
        on right: 40 54 61 94 95 103 104
    simpleExp <tree> (82)
        on left: 65 66
        on right: 12 32 33 36 37 38 51 52 62 65
    andExp <tree> (83)
        on left: 67 68
        on right: 65 66 67
    relExp <tree> (84)
        on left: 69 70
        on right: 72
    unaryRelExp <tree> (85)
        on left: 71 72
        on right: 67 68 71
    operator <tree> (86)
        on left: 73 74 75 76 77 78
        on right: 69
    sumExp <tree> (87)
        on left: 79 80
        on right: 69 70 79
    sumop <tree> (88)
        on left: 81 82
        on right: 79
    mulExp <tree> (89)
        on left: 83 84
        on right: 79 80 83
    mulop <tree> (90)
        on left: 85 86 87
        on right: 83
    unaryExp <tree> (91)
        on left: 88 89
        on right: 83 84 88
    unaryop <tree> (92)
        on left: 90 91 92
        on right: 88
    mutable <tree> (93)
        on left: 93 94
        on right: 61 63 64 98
    immutable <tree> (94)
        on left: 95 96 97
        on right: 99
    factor <tree> (95)
        on left: 98 99
        on right: 89
    call <tree> (96)
        on left: 100
        on right: 96
    args <tree> (97)
        on left: 101 102
        on right: 100
    argList <tree> (98)
        on left: 103 104
        on right: 101 103
    constant <tree> (99)
        on left: 105 106 107 108
        on right: 97


State 0

    0 $accept: • program $end

    ID    shift, and go to state 1
    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    program          go to state 5
    declarationList  go to state 6
    declaration      go to state 7
    varDeclaration   go to state 8
    typespec         go to state 9
    funDeclaration   go to state 10


State 1

   19 funDeclaration: ID • OPAREN parameters CPAREN compoundstatement

    OPAREN  shift, and go to state 11


State 2

   15 typespec: INT •

    $default  reduce using rule 15 (typespec)


State 3

   17 typespec: BOOL •

    $default  reduce using rule 17 (typespec)


State 4

   16 typespec: CHAR •

    $default  reduce using rule 16 (typespec)


State 5

    0 $accept: program • $end

    $end  shift, and go to state 12


State 6

    1 program: declarationList •
    2 declarationList: declarationList • declaration

    ID    shift, and go to state 1
    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 1 (program)

    declaration     go to state 13
    varDeclaration  go to state 8
    typespec        go to state 9
    funDeclaration  go to state 10


State 7

    3 declarationList: declaration •

    $default  reduce using rule 3 (declarationList)


State 8

    5 declaration: varDeclaration •

    $default  reduce using rule 5 (declaration)


State 9

    6 varDeclaration: typespec • vardeclarationList SEMICOLON
   18 funDeclaration: typespec • ID OPAREN parameters CPAREN compoundstatement

    ID  shift, and go to state 14

    vardeclarationList  go to state 15
    varDeclarationInit  go to state 16
    varDeclarationId    go to state 17


State 10

    4 declaration: funDeclaration •

    $default  reduce using rule 4 (declaration)


State 11

   19 funDeclaration: ID OPAREN • parameters CPAREN compoundstatement

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 21 (parameters)

    typespec           go to state 18
    parameters         go to state 19
    parameterList      go to state 20
    parameterTypeList  go to state 21


State 12

    0 $accept: program $end •

    $default  accept


State 13

    2 declarationList: declarationList declaration •

    $default  reduce using rule 2 (declarationList)


State 14

   13 varDeclarationId: ID •
   14                 | ID • OBRACKET NUMCONST CBRACKET
   18 funDeclaration: typespec ID • OPAREN parameters CPAREN compoundstatement

    OBRACKET  shift, and go to state 22
    OPAREN    shift, and go to state 23

    $default  reduce using rule 13 (varDeclarationId)


State 15

    6 varDeclaration: typespec vardeclarationList • SEMICOLON
    9 vardeclarationList: vardeclarationList • COMMA varDeclarationInit

    COMMA      shift, and go to state 24
    SEMICOLON  shift, and go to state 25


State 16

   10 vardeclarationList: varDeclarationInit •

    $default  reduce using rule 10 (vardeclarationList)


State 17

   11 varDeclarationInit: varDeclarationId •
   12                   | varDeclarationId • COLON simpleExp

    COLON  shift, and go to state 26

    $default  reduce using rule 11 (varDeclarationInit)


State 18

   24 parameterTypeList: typespec • parameterIdList

    ID  shift, and go to state 27

    parameterIdList  go to state 28
    parameterId      go to state 29


State 19

   19 funDeclaration: ID OPAREN parameters • CPAREN compoundstatement

    CPAREN  shift, and go to state 30


State 20

   20 parameters: parameterList •
   22 parameterList: parameterList • SEMICOLON parameterTypeList

    SEMICOLON  shift, and go to state 31

    $default  reduce using rule 20 (parameters)


State 21

   23 parameterList: parameterTypeList •

    $default  reduce using rule 23 (parameterList)


State 22

   14 varDeclarationId: ID OBRACKET • NUMCONST CBRACKET

    NUMCONST  shift, and go to state 32


State 23

   18 funDeclaration: typespec ID OPAREN • parameters CPAREN compoundstatement

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 21 (parameters)

    typespec           go to state 18
    parameters         go to state 33
    parameterList      go to state 20
    parameterTypeList  go to state 21


State 24

    9 vardeclarationList: vardeclarationList COMMA • varDeclarationInit

    ID  shift, and go to state 34

    varDeclarationInit  go to state 35
    varDeclarationId    go to state 17


State 25

    6 varDeclaration: typespec vardeclarationList SEMICOLON •

    $default  reduce using rule 6 (varDeclaration)


State 26

   12 varDeclarationInit: varDeclarationId COLON • simpleExp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    NOT          shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    QUESTION     shift, and go to state 42
    MULT         shift, and go to state 43
    MINUS        shift, and go to state 44
    OPAREN       shift, and go to state 45

    simpleExp    go to state 46
    andExp       go to state 47
    relExp       go to state 48
    unaryRelExp  go to state 49
    sumExp       go to state 50
    mulExp       go to state 51
    unaryExp     go to state 52
    unaryop      go to state 53
    mutable      go to state 54
    immutable    go to state 55
    factor       go to state 56
    call         go to state 57
    constant     go to state 58


State 27

   27 parameterId: ID •
   28            | ID • OBRACKET CBRACKET

    OBRACKET  shift, and go to state 59

    $default  reduce using rule 27 (parameterId)


State 28

   24 parameterTypeList: typespec parameterIdList •
   25 parameterIdList: parameterIdList • COMMA parameterId

    COMMA  shift, and go to state 60

    $default  reduce using rule 24 (parameterTypeList)


State 29

   26 parameterIdList: parameterId •

    $default  reduce using rule 26 (parameterIdList)


State 30

   19 funDeclaration: ID OPAREN parameters CPAREN • compoundstatement

    BEGN  shift, and go to state 61

    compoundstatement  go to state 62


State 31

   22 parameterList: parameterList SEMICOLON • parameterTypeList

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    typespec           go to state 18
    parameterTypeList  go to state 63


State 32

   14 varDeclarationId: ID OBRACKET NUMCONST • CBRACKET

    CBRACKET  shift, and go to state 64


State 33

   18 funDeclaration: typespec ID OPAREN parameters • CPAREN compoundstatement

    CPAREN  shift, and go to state 65


State 34

   13 varDeclarationId: ID •
   14                 | ID • OBRACKET NUMCONST CBRACKET

    OBRACKET  shift, and go to state 22

    $default  reduce using rule 13 (varDeclarationId)


State 35

    9 vardeclarationList: vardeclarationList COMMA varDeclarationInit •

    $default  reduce using rule 9 (vardeclarationList)


State 36

   93 mutable: ID •
   94        | ID • OBRACKET exp CBRACKET
  100 call: ID • OPAREN args CPAREN

    OBRACKET  shift, and go to state 66
    OPAREN    shift, and go to state 67

    $default  reduce using rule 93 (mutable)


State 37

  105 constant: NUMCONST •

    $default  reduce using rule 105 (constant)


State 38

  106 constant: CHARCONST •

    $default  reduce using rule 106 (constant)


State 39

  108 constant: STRINGCONST •

    $default  reduce using rule 108 (constant)


State 40

   71 unaryRelExp: NOT • unaryRelExp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    NOT          shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    QUESTION     shift, and go to state 42
    MULT         shift, and go to state 43
    MINUS        shift, and go to state 44
    OPAREN       shift, and go to state 45

    relExp       go to state 48
    unaryRelExp  go to state 68
    sumExp       go to state 50
    mulExp       go to state 51
    unaryExp     go to state 52
    unaryop      go to state 53
    mutable      go to state 54
    immutable    go to state 55
    factor       go to state 56
    call         go to state 57
    constant     go to state 58


State 41

  107 constant: BOOLCONST •

    $default  reduce using rule 107 (constant)


State 42

   92 unaryop: QUESTION •

    $default  reduce using rule 92 (unaryop)


State 43

   91 unaryop: MULT •

    $default  reduce using rule 91 (unaryop)


State 44

   90 unaryop: MINUS •

    $default  reduce using rule 90 (unaryop)


State 45

   95 immutable: OPAREN • exp CPAREN

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    NOT          shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    QUESTION     shift, and go to state 42
    MULT         shift, and go to state 43
    MINUS        shift, and go to state 44
    OPAREN       shift, and go to state 45

    exp          go to state 69
    simpleExp    go to state 70
    andExp       go to state 47
    relExp       go to state 48
    unaryRelExp  go to state 49
    sumExp       go to state 50
    mulExp       go to state 51
    unaryExp     go to state 52
    unaryop      go to state 53
    mutable      go to state 71
    immutable    go to state 55
    factor       go to state 56
    call         go to state 57
    constant     go to state 58


State 46

   12 varDeclarationInit: varDeclarationId COLON simpleExp •
   65 simpleExp: simpleExp • OR andExp

    OR  shift, and go to state 72

    $default  reduce using rule 12 (varDeclarationInit)


State 47

   66 simpleExp: andExp •
   67 andExp: andExp • AND unaryRelExp

    AND  shift, and go to state 73

    $default  reduce using rule 66 (simpleExp)


State 48

   72 unaryRelExp: relExp •

    $default  reduce using rule 72 (unaryRelExp)


State 49

   68 andExp: unaryRelExp •

    $default  reduce using rule 68 (andExp)


State 50

   69 relExp: sumExp • operator sumExp
   70       | sumExp •
   79 sumExp: sumExp • sumop mulExp

    GEQ    shift, and go to state 74
    LEQ    shift, and go to state 75
    NEQ    shift, and go to state 76
    LESS   shift, and go to state 77
    GREAT  shift, and go to state 78
    PLUS   shift, and go to state 79
    EQUAL  shift, and go to state 80
    MINUS  shift, and go to state 81

    $default  reduce using rule 70 (relExp)

    operator  go to state 82
    sumop     go to state 83


State 51

   80 sumExp: mulExp •
   83 mulExp: mulExp • mulop unaryExp

    MULT  shift, and go to state 84
    DIV   shift, and go to state 85
    MOD   shift, and go to state 86

    $default  reduce using rule 80 (sumExp)

    mulop  go to state 87


State 52

   84 mulExp: unaryExp •

    $default  reduce using rule 84 (mulExp)


State 53

   88 unaryExp: unaryop • unaryExp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    BOOLCONST    shift, and go to state 41
    QUESTION     shift, and go to state 42
    MULT         shift, and go to state 43
    MINUS        shift, and go to state 44
    OPAREN       shift, and go to state 45

    unaryExp   go to state 88
    unaryop    go to state 53
    mutable    go to state 54
    immutable  go to state 55
    factor     go to state 56
    call       go to state 57
    constant   go to state 58


State 54

   98 factor: mutable •

    $default  reduce using rule 98 (factor)


State 55

   99 factor: immutable •

    $default  reduce using rule 99 (factor)


State 56

   89 unaryExp: factor •

    $default  reduce using rule 89 (unaryExp)


State 57

   96 immutable: call •

    $default  reduce using rule 96 (immutable)


State 58

   97 immutable: constant •

    $default  reduce using rule 97 (immutable)


State 59

   28 parameterId: ID OBRACKET • CBRACKET

    CBRACKET  shift, and go to state 89


State 60

   25 parameterIdList: parameterIdList COMMA • parameterId

    ID  shift, and go to state 27

    parameterId  go to state 90


State 61

   46 compoundstatement: BEGN • localdeclaration statementList FINISH

    $default  reduce using rule 48 (localdeclaration)

    localdeclaration  go to state 91


State 62

   19 funDeclaration: ID OPAREN parameters CPAREN compoundstatement •

    $default  reduce using rule 19 (funDeclaration)


State 63

   22 parameterList: parameterList SEMICOLON parameterTypeList •

    $default  reduce using rule 22 (parameterList)


State 64

   14 varDeclarationId: ID OBRACKET NUMCONST CBRACKET •

    $default  reduce using rule 14 (varDeclarationId)


State 65

   18 funDeclaration: typespec ID OPAREN parameters CPAREN • compoundstatement

    BEGN  shift, and go to state 61

    compoundstatement  go to state 92


State 66

   94 mutable: ID OBRACKET • exp CBRACKET

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    NOT          shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    QUESTION     shift, and go to state 42
    MULT         shift, and go to state 43
    MINUS        shift, and go to state 44
    OPAREN       shift, and go to state 45

    exp          go to state 93
    simpleExp    go to state 70
    andExp       go to state 47
    relExp       go to state 48
    unaryRelExp  go to state 49
    sumExp       go to state 50
    mulExp       go to state 51
    unaryExp     go to state 52
    unaryop      go to state 53
    mutable      go to state 71
    immutable    go to state 55
    factor       go to state 56
    call         go to state 57
    constant     go to state 58


State 67

  100 call: ID OPAREN • args CPAREN

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    NOT          shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    QUESTION     shift, and go to state 42
    MULT         shift, and go to state 43
    MINUS        shift, and go to state 44
    OPAREN       shift, and go to state 45

    $default  reduce using rule 102 (args)

    exp          go to state 94
    simpleExp    go to state 70
    andExp       go to state 47
    relExp       go to state 48
    unaryRelExp  go to state 49
    sumExp       go to state 50
    mulExp       go to state 51
    unaryExp     go to state 52
    unaryop      go to state 53
    mutable      go to state 71
    immutable    go to state 55
    factor       go to state 56
    call         go to state 57
    args         go to state 95
    argList      go to state 96
    constant     go to state 58


State 68

   71 unaryRelExp: NOT unaryRelExp •

    $default  reduce using rule 71 (unaryRelExp)


State 69

   95 immutable: OPAREN exp • CPAREN

    CPAREN  shift, and go to state 97


State 70

   62 exp: simpleExp •
   65 simpleExp: simpleExp • OR andExp

    OR  shift, and go to state 72

    $default  reduce using rule 62 (exp)


State 71

   61 exp: mutable • asgnop exp
   63    | mutable • INC
   64    | mutable • DEC
   98 factor: mutable •

    ASGN     shift, and go to state 98
    ADDASGN  shift, and go to state 99
    SUBASS   shift, and go to state 100
    INC      shift, and go to state 101
    DEC      shift, and go to state 102
    MULASS   shift, and go to state 103
    DIVASS   shift, and go to state 104

    $default  reduce using rule 98 (factor)

    asgnop  go to state 105


State 72

   65 simpleExp: simpleExp OR • andExp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    NOT          shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    QUESTION     shift, and go to state 42
    MULT         shift, and go to state 43
    MINUS        shift, and go to state 44
    OPAREN       shift, and go to state 45

    andExp       go to state 106
    relExp       go to state 48
    unaryRelExp  go to state 49
    sumExp       go to state 50
    mulExp       go to state 51
    unaryExp     go to state 52
    unaryop      go to state 53
    mutable      go to state 54
    immutable    go to state 55
    factor       go to state 56
    call         go to state 57
    constant     go to state 58


State 73

   67 andExp: andExp AND • unaryRelExp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    NOT          shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    QUESTION     shift, and go to state 42
    MULT         shift, and go to state 43
    MINUS        shift, and go to state 44
    OPAREN       shift, and go to state 45

    relExp       go to state 48
    unaryRelExp  go to state 107
    sumExp       go to state 50
    mulExp       go to state 51
    unaryExp     go to state 52
    unaryop      go to state 53
    mutable      go to state 54
    immutable    go to state 55
    factor       go to state 56
    call         go to state 57
    constant     go to state 58


State 74

   74 operator: GEQ •

    $default  reduce using rule 74 (operator)


State 75

   76 operator: LEQ •

    $default  reduce using rule 76 (operator)


State 76

   78 operator: NEQ •

    $default  reduce using rule 78 (operator)


State 77

   75 operator: LESS •

    $default  reduce using rule 75 (operator)


State 78

   73 operator: GREAT •

    $default  reduce using rule 73 (operator)


State 79

   81 sumop: PLUS •

    $default  reduce using rule 81 (sumop)


State 80

   77 operator: EQUAL •

    $default  reduce using rule 77 (operator)


State 81

   82 sumop: MINUS •

    $default  reduce using rule 82 (sumop)


State 82

   69 relExp: sumExp operator • sumExp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    BOOLCONST    shift, and go to state 41
    QUESTION     shift, and go to state 42
    MULT         shift, and go to state 43
    MINUS        shift, and go to state 44
    OPAREN       shift, and go to state 45

    sumExp     go to state 108
    mulExp     go to state 51
    unaryExp   go to state 52
    unaryop    go to state 53
    mutable    go to state 54
    immutable  go to state 55
    factor     go to state 56
    call       go to state 57
    constant   go to state 58


State 83

   79 sumExp: sumExp sumop • mulExp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    BOOLCONST    shift, and go to state 41
    QUESTION     shift, and go to state 42
    MULT         shift, and go to state 43
    MINUS        shift, and go to state 44
    OPAREN       shift, and go to state 45

    mulExp     go to state 109
    unaryExp   go to state 52
    unaryop    go to state 53
    mutable    go to state 54
    immutable  go to state 55
    factor     go to state 56
    call       go to state 57
    constant   go to state 58


State 84

   85 mulop: MULT •

    $default  reduce using rule 85 (mulop)


State 85

   86 mulop: DIV •

    $default  reduce using rule 86 (mulop)


State 86

   87 mulop: MOD •

    $default  reduce using rule 87 (mulop)


State 87

   83 mulExp: mulExp mulop • unaryExp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    BOOLCONST    shift, and go to state 41
    QUESTION     shift, and go to state 42
    MULT         shift, and go to state 43
    MINUS        shift, and go to state 44
    OPAREN       shift, and go to state 45

    unaryExp   go to state 110
    unaryop    go to state 53
    mutable    go to state 54
    immutable  go to state 55
    factor     go to state 56
    call       go to state 57
    constant   go to state 58


State 88

   88 unaryExp: unaryop unaryExp •

    $default  reduce using rule 88 (unaryExp)


State 89

   28 parameterId: ID OBRACKET CBRACKET •

    $default  reduce using rule 28 (parameterId)


State 90

   25 parameterIdList: parameterIdList COMMA parameterId •

    $default  reduce using rule 25 (parameterIdList)


State 91

   46 compoundstatement: BEGN localdeclaration • statementList FINISH
   47 localdeclaration: localdeclaration • scopedtypespecificer

    INT     shift, and go to state 2
    BOOL    shift, and go to state 3
    CHAR    shift, and go to state 4
    STATIC  shift, and go to state 111

    $default  reduce using rule 50 (statementList)

    scopedtypespecificer  go to state 112
    typespec              go to state 113
    statementList         go to state 114


State 92

   18 funDeclaration: typespec ID OPAREN parameters CPAREN compoundstatement •

    $default  reduce using rule 18 (funDeclaration)


State 93

   94 mutable: ID OBRACKET exp • CBRACKET

    CBRACKET  shift, and go to state 115


State 94

  104 argList: exp •

    $default  reduce using rule 104 (argList)


State 95

  100 call: ID OPAREN args • CPAREN

    CPAREN  shift, and go to state 116


State 96

  101 args: argList •
  103 argList: argList • COMMA exp

    COMMA  shift, and go to state 117

    $default  reduce using rule 101 (args)


State 97

   95 immutable: OPAREN exp CPAREN •

    $default  reduce using rule 95 (immutable)


State 98

   56 asgnop: ASGN •

    $default  reduce using rule 56 (asgnop)


State 99

   57 asgnop: ADDASGN •

    $default  reduce using rule 57 (asgnop)


State 100

   58 asgnop: SUBASS •

    $default  reduce using rule 58 (asgnop)


State 101

   63 exp: mutable INC •

    $default  reduce using rule 63 (exp)


State 102

   64 exp: mutable DEC •

    $default  reduce using rule 64 (exp)


State 103

   59 asgnop: MULASS •

    $default  reduce using rule 59 (asgnop)


State 104

   60 asgnop: DIVASS •

    $default  reduce using rule 60 (asgnop)


State 105

   61 exp: mutable asgnop • exp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    NOT          shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    QUESTION     shift, and go to state 42
    MULT         shift, and go to state 43
    MINUS        shift, and go to state 44
    OPAREN       shift, and go to state 45

    exp          go to state 118
    simpleExp    go to state 70
    andExp       go to state 47
    relExp       go to state 48
    unaryRelExp  go to state 49
    sumExp       go to state 50
    mulExp       go to state 51
    unaryExp     go to state 52
    unaryop      go to state 53
    mutable      go to state 71
    immutable    go to state 55
    factor       go to state 56
    call         go to state 57
    constant     go to state 58


State 106

   65 simpleExp: simpleExp OR andExp •
   67 andExp: andExp • AND unaryRelExp

    AND  shift, and go to state 73

    $default  reduce using rule 65 (simpleExp)


State 107

   67 andExp: andExp AND unaryRelExp •

    $default  reduce using rule 67 (andExp)


State 108

   69 relExp: sumExp operator sumExp •
   79 sumExp: sumExp • sumop mulExp

    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 81

    $default  reduce using rule 69 (relExp)

    sumop  go to state 83


State 109

   79 sumExp: sumExp sumop mulExp •
   83 mulExp: mulExp • mulop unaryExp

    MULT  shift, and go to state 84
    DIV   shift, and go to state 85
    MOD   shift, and go to state 86

    $default  reduce using rule 79 (sumExp)

    mulop  go to state 87


State 110

   83 mulExp: mulExp mulop unaryExp •

    $default  reduce using rule 83 (mulExp)


State 111

    7 scopedtypespecificer: STATIC • typespec vardeclarationList SEMICOLON

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    typespec  go to state 119


State 112

   47 localdeclaration: localdeclaration scopedtypespecificer •

    $default  reduce using rule 47 (localdeclaration)


State 113

    8 scopedtypespecificer: typespec • vardeclarationList SEMICOLON

    ID  shift, and go to state 34

    vardeclarationList  go to state 120
    varDeclarationInit  go to state 16
    varDeclarationId    go to state 17


State 114

   46 compoundstatement: BEGN localdeclaration statementList • FINISH
   49 statementList: statementList • statement

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    IF           shift, and go to state 121
    NOT          shift, and go to state 40
    FOR          shift, and go to state 122
    BREAK        shift, and go to state 123
    RETURN       shift, and go to state 124
    BEGN         shift, and go to state 61
    FINISH       shift, and go to state 125
    WHILE        shift, and go to state 126
    BOOLCONST    shift, and go to state 41
    QUESTION     shift, and go to state 42
    MULT         shift, and go to state 43
    MINUS        shift, and go to state 44
    SEMICOLON    shift, and go to state 127
    OPAREN       shift, and go to state 45
